Use TogetherAI instead of OpenAI

--- a/.github/workflows/create-index-release.yml
+++ b/.github/workflows/create-index-release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Index documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          TOGETHERAI_API_KEY: ${{ secrets.TOGETHERAI_API_KEY }}
         run: |
           python indexer/main.py
 
